samples/shrubbery/examples/failing/indentedGroup.shrub
foo ok
bar ok
  baz bad
